--- a/src/app/pages/listar-productos/listar-productos.component.html
+++ b/src/app/pages/listar-productos/listar-productos.component.html
@@ -55,7 +55,7 @@
           >
 
           <a type="button" class="btn btn-primary btn-sm"
-            ><span>$ {{ producto.precioVenta }}</span></a
+            ><span> {{ producto.precioVenta | currency}}</span></a
           >
 
           <a type="button" class="btn btn-primary btn-sm">
