--- a/src/app/pages/admin/categorias/categoria-prod/editar-categoria-prod/editar-categoria-prod.component.html
+++ b/src/app/pages/admin/categorias/categoria-prod/editar-categoria-prod/editar-categoria-prod.component.html
@@ -1,73 +1,85 @@
 <div class="fondoBody">
-  <mat-toolbar>
-    <span>Actualizar producto</span>
-  </mat-toolbar>
+  <mat-dialog-content class="mat-typography fondoBody">
+    <mat-toolbar class="centrar">
+      <span>Actualizar producto</span>
+    </mat-toolbar>
 
-  <!-- <div class="row "> -->
-  <form class="sombra" [formGroup]="formActualizarCatProd">
-    <mat-grid-list cols="4" rowHeight="100px">
-      <mat-grid-tile [colspan]="3" [rowspan]="5">
-        <mat-card>
-          <mat-card-content>
-            <mat-form-field class="example-full-width" appearance="fill">
-              <mat-label>Agente extintor</mat-label>
-              <input
-                matInput
-                value="{{ categoriaProducto.agExtintor }}"
-                formControlName="agExtintor"
-                autocomplete="off"
-              />
-            </mat-form-field>
-            <mat-form-field class="example-full-width" appearance="fill">
-              <mat-label>Clase</mat-label>
-              <input
-                matInput
-                value="{{ categoriaProducto.clase }}"
-                formControlName="clase"
-                autocomplete="off"
-              />
-            </mat-form-field>
-            <mat-form-field class="example-full-width" appearance="fill">
-              <mat-label>Descripcion</mat-label>
-              <input
-                matInput
-                value="{{ categoriaProducto.descripcion }}"
-                formControlName="descripcion"
-                autocomplete="off"
-              />
-            </mat-form-field>
-            <mat-form-field class="example-full-width" appearance="fill">
-              <mat-label>Fuegos</mat-label>
-              <textarea
-                matInput
-                value="{{ categoriaProducto.fuegos }}"
-                formControlName="fuegos"
-                autocomplete="off"
-              ></textarea>
-            </mat-form-field>
-            <mat-form-field class="example-full-width" appearance="fill">
-              <mat-label>Aplicativos</mat-label>
-              <textarea
-                matInput
-                value="{{ categoriaProducto.aplicativos }}"
-                formControlName="fuegos"
-                autocomplete="off"
-              ></textarea>
-            </mat-form-field>
-          </mat-card-content>
-          <mat-card-actions align="start">
-            <button
-              mat-raised-button
-              color="primary"
-              (click)="actualizarCategoriaProd(formActualizarCatProd.value)"
-            >
-              Actualizar
-            </button>
-          </mat-card-actions>
-        </mat-card>
-      </mat-grid-tile>
-    </mat-grid-list>
-  </form>
-  <!-- </div> -->
+    <div class="row centrar">
+      <form class="sombra" [formGroup]="formActualizarCatProd">
+        <table mat-table matSort class="centrar">
+          <tr>
+            <td>
+              <mat-form-field class="max-widthInput" appearance="fill">
+                <mat-label>Agente extintor</mat-label>
+                <input
+                  matInput
+                  value="{{ categoriaProducto.agExtintor }}"
+                  formControlName="agExtintor"
+                  autocomplete="off"
+                />
+              </mat-form-field>
+            </td>
+            <td>
+              <mat-form-field class="max-widthInput" appearance="fill">
+                <mat-label>Clase</mat-label>
+                <input
+                  matInput
+                  value="{{ categoriaProducto.clase }}"
+                  formControlName="clase"
+                  autocomplete="off"
+                />
+              </mat-form-field>
+            </td>
+            <td>
+              <mat-form-field class="max-widthInput" appearance="fill">
+                <mat-label>Descripcion</mat-label>
+                <input
+                  matInput
+                  value="{{ categoriaProducto.descripcion }}"
+                  formControlName="descripcion"
+                  autocomplete="off"
+                />
+              </mat-form-field>
+            </td>
+            <td>
+              <mat-form-field class="max-widthInput" appearance="fill">
+                <mat-label>Fuegos</mat-label>
+                <textarea
+                  matInput
+                  value="{{ categoriaProducto.fuegos }}"
+                  formControlName="fuegos"
+                  autocomplete="off"
+                ></textarea>
+              </mat-form-field>
+            </td>
+            <td>
+              <mat-form-field class="max-widthInput" appearance="fill">
+                <mat-label>Aplicativos</mat-label>
+                <textarea
+                  matInput
+                  value="{{ categoriaProducto.aplicativos }}"
+                  formControlName="aplicativos"
+                  autocomplete="off"
+                ></textarea>
+              </mat-form-field>
+            </td>
+          </tr>
+        </table>
+
+        <div class="row">
+          <button
+            mat-raised-button
+            color="primary"
+            (click)="actualizarCategoriaProd(formActualizarCatProd.value)"
+          >
+            Actualizar
+          </button>
+        </div>
+      </form>
+    </div>
+  </mat-dialog-content>
+
+  <mat-dialog-actions align="end">
+    <button mat-button mat-dialog-close>Volver</button>
+  </mat-dialog-actions>
 </div>
-<!-- -------------------------------------------------------------------------------------- -->
