--- a/src/app/pages/admin/categorias/categoria-prod/tabla-categoria-prod/tabla-categoria-prod.component.html
+++ b/src/app/pages/admin/categorias/categoria-prod/tabla-categoria-prod/tabla-categoria-prod.component.html
@@ -3,7 +3,7 @@
     <mat-toolbar>
       <span>Categorias de Productos</span>
       <span class="enviar_derecha"></span>
-      <button  (click)="openDialog()"  mat-raised-button color="warn">
+      <button (click)="openDialog()" mat-raised-button color="warn">
         <!-- <a
 
           class="nav-link"
@@ -12,7 +12,7 @@
         >
           Crear categoria nueva
           </a> -->
-          Crear categoria nueva
+        Crear categoria nueva
       </button>
     </mat-toolbar>
   </p>
@@ -37,8 +37,7 @@
       class="mat-elevation-z10"
     >
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          No.</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>No.</th>
         <td mat-cell *matCellDef="let element">{{ element.id }}</td>
       </ng-container>
 
@@ -48,16 +47,15 @@
         <td mat-cell *matCellDef="let element">{{ element.imagenProducto }}</td>
       </ng-container> -->
 
-     <ng-container matColumnDef="agExtintor">
+      <ng-container matColumnDef="agExtintor">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          Agente extintor</th>
+          Agente extintor
+        </th>
         <td mat-cell *matCellDef="let element">{{ element.agExtintor }}</td>
       </ng-container>
 
       <ng-container matColumnDef="clase">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          Clase
-        </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Clase</th>
         <td mat-cell *matCellDef="let element">
           {{ element.clase }}
         </td>
@@ -85,15 +83,24 @@
       <ng-container matColumnDef="acciones">
         <th mat-header-cell *matHeaderCellDef>acciones</th>
         <td mat-cell *matCellDef="let element">
-
-          <a class="cursor" [routerLink]="['singleUpdate',element.id]" style="color: blue" matTooltip="Editar categoria"
+          <!-- <a class="cursor" [routerLink]="['singleUpdate',element.id]" style="color: blue" matTooltip="Editar categoria"
+            ><mat-icon>edit</mat-icon></a
+          > -->
+          <a
+            class="cursor"
+            (click)="openDialogEdit(element.id)"
+            style="color: blue"
+            matTooltip="Editar categoria"
             ><mat-icon>edit</mat-icon></a
           >
 
-           <a class="cursor" (click)="eliminarCategoria(element.id)" style="color: red" matTooltip="Eliminar categoria"
+          <a
+            class="cursor"
+            (click)="eliminarCategoria(element.id)"
+            style="color: red"
+            matTooltip="Eliminar categoria"
             ><mat-icon>delete</mat-icon></a
           >
-
         </td>
       </ng-container>
 
