--- a/src/app/pages/admin/proveedores/tabla-proveedores/tabla-proveedores.component.html
+++ b/src/app/pages/admin/proveedores/tabla-proveedores/tabla-proveedores.component.html
@@ -3,14 +3,9 @@
     <mat-toolbar>
       <span>Proveedores</span>
       <span class="enviar_derecha"></span>
-      <button mat-raised-button color="warn">
-        <a
-          class="nav-link"
-          routerLink="/admin/proveedores/create"
-          routerLinkActive="active"
-        >
-          Crear proveedor nuevo</a
-        >
+      <button (click)="openDialog()" mat-raised-button color="warn">
+
+        Crear proveedor nueva
       </button>
     </mat-toolbar>
   </p>
@@ -40,11 +35,6 @@
         <td mat-cell *matCellDef="let element">{{ element.id }}</td>
       </ng-container>
 
-      <!-- <ng-container matColumnDef="imagenProducto">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          Imagen</th>
-        <td mat-cell *matCellDef="let element">{{ element.imagenProducto }}</td>
-      </ng-container> -->
 
      <ng-container matColumnDef="razonSocial">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
@@ -115,9 +105,13 @@
           acciones</th>
         <td mat-cell *matCellDef="let element">
 
-          <a class="cursor" [routerLink]="['singleUpdate',element.id]" style="color: blue" matTooltip="Editar Proveedor"
-            ><mat-icon>edit</mat-icon></a
-          >
+          <a
+          class="cursor"
+          (click)="openDialogEdit(element.id)"
+          style="color: blue"
+          matTooltip="Editar categoria"
+          ><mat-icon>edit</mat-icon></a
+        >
 
            <a class="cursor" (click)="eliminarProveedor(element.id)" style="color: red" matTooltip="Eliminar Proveedor"
             ><mat-icon>delete</mat-icon></a
